fix position, spacing, alignment of about page icons

--- a/src/partials/_about.scss
+++ b/src/partials/_about.scss
@@ -47,14 +47,20 @@
   flex-wrap: wrap;
 
   .icon {
+    list-style-type: none;
     margin: 1rem;
-    width: calc(150px - 2rem);
+    width: calc((100% / 3) - 2rem);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    // justify-content: center;
     // width: calc(100% / 4 - 2rem);
 
     // ! make images all the same size
     img {
-      object-fit: fill;
-      // height: 150px;
+      object-fit: contain;
+      width: 150px;
+      height: 150px;
       // height: 100%;
     }
   }
